* Align to center and correct answer
* Table Data is now aligned to center
* The letter of the correct answer is shown instead of the correct
answer itself

--- a/style/adminpanel.css
+++ b/style/adminpanel.css
@@ -14,3 +14,4 @@
 #questions_table tfoot a { color: #fff; }
 #listButtons { margin-left: 0; }
 #mod_btn { display: inline-block; text-align: center; }
+#centeredTd {text-align: center;}
